--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.16.3",
     "express-session": "^1.16.1",
     "if-env": "^1.0.4",
+    "jquery": "^3.4.1",
     "mongodb": "^3.2.3",
     "mongoose": "^5.5.3",
     "morgan": "^1.9.1",
